--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body{
 }
 header{
 	position: fixed;
+	width: 100%;
 	top: 0;
 	right: 0;
 	z-index: 1000;
@@ -530,7 +531,7 @@ header.sticky{
 	.home{
 		grid-template-columns: 1fr;
 		min-height: 130vh;
-		grid-gap: 1rem;
+		grid-gap: 0.5rem;
 	}
 	.home-text{
 		padding-top: 55px;
